add MQA FAQ - get Slope from a curve

--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,5 +1,10 @@
 <table width="100%">
     <tr>
+        <td width="15%">2017.12.08</td>
+        <td>Add a MQA FAQ: <a href="/mqafaq/slope" target="_blank">Get the Slope from a Curve in MQA Rule</a>
+        </td>
+    </tr>
+    <tr>
         <td width="15%">2017.11.27</td>
         <td>Add an ICCAP Blog: <a href="/blog/iccap_python_s_par" target="_blank">Use Python to process S Parameter in
             ICCAP</a>
