add MQA FAQ - get Slope from a curve

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@ Device Modeling Works
 <!--<div class="container" style="height: 160px; overflow: auto">-->
 <div class="container" style="height: 100px; overflow: hidden">
 
-    <h5><a href="/update_history" target="_blank">Full Update History</a></h5>
+    <h5><a href="/update_history" target="_blank">View Full Update History</a></h5>
     {% include 'updateHisCore.html' %}
 
 
