--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,5 +1,11 @@
 <table width="100%">
     <tr>
+        <td width="15%">2018.01.08</td>
+        <td>Add a MBP FAQ: <a href="/mbpfaq/meascond" target="_blank">Use MeasCond to Put Similar Sweeps into Different
+            Groups</a>
+        </td>
+    </tr>
+    <tr>
         <td width="15%">2017.12.08</td>
         <td>Add a MQA FAQ: <a href="/mqafaq/slope" target="_blank">Get the Slope from a Curve in MQA Rule</a>
         </td>
