add MQA FAQ - _JAVA_OPTIONS

--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,6 +1,11 @@
 <table width="100%">
     <tr>
         <td width="15%">2018.01.08</td>
+        <td>Add a MBP FAQ: <a href="/mbpfaq/javaoptions" target="_blank">Use _JAVA_OPTIONS to Assign Larger Java Memory</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2018.01.08</td>
         <td>Add a MBP FAQ: <a href="/mbpfaq/meascond" target="_blank">Use MeasCond to Put Similar Sweeps into Different
             Groups</a>
         </td>
