add user history over time

--- a/templates/mbpst/toc.html
+++ b/templates/mbpst/toc.html
@@ -64,6 +64,7 @@
             <li><a href="/mbpst/chap3.21">21. Region Selection</a></li>
             <li><a href="/mbpst/chap3.22">22. Time Tasks in Flow</a></li>
             <li><a href="/mbpst/chap3.23">23. Global Variables</a></li>
+            <li><a href="/mbpst/chap3.24">24. Vth_gm Algorithm</a></li>
 
         </ul>
 
