--- a/templates/mqarules/toc.html
+++ b/templates/mqarules/toc.html
@@ -23,6 +23,7 @@
     <h5><a href="/mqarules/cxy">Explore Multi Capacitances of a Transistor</a></h5>
     <h5><a href="/mqarules/crss_ciss_coss">Crss, Ciss, Coss</a></h5>
     <h5><a href="/mqarules/misHspMos_finfet">Mismatch FinFET | Hspice</a></h5>
+    <h5><a href="/mqarules/vtgm">Vth_gm</a></h5>
 
     <br/><br/><br/><br/><br/>
 
