--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,7 +1,24 @@
 <table width="100%">
     <tr>
+        <td width="15%">2018.02.01</td>
+        <td>Add MBP<sub>script</sub> Chapter 3.24: <a href="/mbpst/chap3.24" target="_blank">Vth_gm Algorithm</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2018.02.01</td>
+        <td>Update PyRFS Chap1.3: <a href="/pyrfs/chap1.3" target="_blank">PyRFS - Get Started - Python Interpreter
+            Paths settings using PyCharm</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2018.02.01</td>
+        <td>Add a MQA Rule: <a href="/mqarules/vtgm" target="_blank">Implement Vth_gm algorithm in MQA Rule</a>
+        </td>
+    </tr>
+    <tr>
         <td width="15%">2018.01.08</td>
-        <td>Add a MBP FAQ: <a href="/mbpfaq/javaoptions" target="_blank">Use _JAVA_OPTIONS to Assign Larger Java Memory</a>
+        <td>Add a MBP FAQ: <a href="/mbpfaq/javaoptions" target="_blank">Use _JAVA_OPTIONS to Assign Larger Java
+            Memory</a>
         </td>
     </tr>
     <tr>
