add 3 alfna faqs

--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -30,6 +30,8 @@ Add Post
             <option value="blog">Blog</option>
             <option value="mqarules">MQA Rules</option>
             <option value="iccapfaq">ICCAP FAQ</option>
+            <option value="wpefaq">WPE FAQ</option>
+            <option value="alfnafaq">ALFNA FAQ</option>
 
         </select>
         <br/><br/>
