--- a/templates/faq/iccap/link2ads.html
+++ b/templates/faq/iccap/link2ads.html
@@ -7,7 +7,7 @@
 
 
 This note explains how to link ICCAP to ADS Simulator,
-<em>hpssefosim</em>, which is from Keysigtht's Advance Design System(ADS) software. It supports to run simulation in the following approaches:
+<em>hpeesofsim</em>, which is from Keysigtht's Advance Design System(ADS) software. It supports to run simulation in the following approaches:
 <br/>
 <ul>
     <br/>
