--- a/templates/faq/toc.html
+++ b/templates/faq/toc.html
@@ -4,6 +4,8 @@
     <h4><a href="/mbpfaq">MBP FAQs</a></h4>
     <h4><a href="/mqafaq">MQA FAQs</a></h4>
     <h4><a href="/iccapfaq">ICCAP FAQs</a></h4>
+    <h4><a href="/wpefaq">WPE FAQs</a></h4>
+    <h4><a href="/alfnafaq">ALFNA FAQs</a></h4>
 
     <br/><br/><br/><br/><br/>
 </div>
