--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,5 +1,26 @@
 <table width="100%">
     <tr>
+        <td width="15%">2018.03.06</td>
+        <td>Add ALFNA FAQ: <a href="/alfnafaq/rload_usage" target="_blank">Best Practice to Choose RLoad for 1/f Noise Measurement</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2018.03.05</td>
+        <td>Add ALFNA FAQ: <a href="/alfnafaq/system_noise_floor" target="_blank">Understand System Noise Floor</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2018.03.05</td>
+        <td>Add ALFNA FAQ: <a href="/alfnafaq/40mhz" target="_blank">40MHz Limitation</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2018.03.01</td>
+        <td>Add WaferPro Express FAQ: <a href="/wpefaq/add_probecard" target="_blank">How to Add User Probe Card
+            Pin-to-Pad Mapping</a>
+        </td>
+    </tr>
+    <tr>
         <td width="15%">2018.02.01</td>
         <td>Add MBP<sub>script</sub> Chapter 3.24: <a href="/mbpst/chap3.24" target="_blank">Vth_gm Algorithm</a>
         </td>
