--- a/templates/pyrfs/toc.html
+++ b/templates/pyrfs/toc.html
@@ -26,6 +26,7 @@
         <li><a href="/pyrfs/chap2.c1">12. Multi-Tables</a></li>
         <li><a href="/pyrfs/chap2.c2">13. Multi-Sheets</a></li>
         <li><a href="/pyrfs/chap2.d1">14. Scientific Notation</a></li>
+        <li><a href="/pyrfs/chap2.d2">15. Conditions Unit Control</a></li>
 
     </ul>
 
