Add a MQA Rule, compdiff_a

--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,12 +1,19 @@
 <table width="100%">
     <tr>
+        <td width="15%">2018.03.15</td>
+        <td>Add a MQA Rule: <a href="/mqarules/compdiff_a" target="_blank">Check if Measurement Falls Outside Model
+            Corners</a>
+        </td>
+    </tr>
+    <tr>
         <td width="15%">2018.03.12</td>
         <td>Add a PyRFS Example: <a href="/pyrfs/chap2.d2" target="_blank">Conditions(W, L, T, etc) Unit Control</a>
         </td>
     </tr>
     <tr>
         <td width="15%">2018.03.06</td>
-        <td>Add ALFNA FAQ: <a href="/alfnafaq/rload_usage" target="_blank">Best Practice to Choose RLoad for 1/f Noise Measurement</a>
+        <td>Add ALFNA FAQ: <a href="/alfnafaq/rload_usage" target="_blank">Best Practice to Choose RLoad for 1/f Noise
+            Measurement</a>
         </td>
     </tr>
     <tr>
