Add a MQA Rule, compdiff_a

--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,5 +1,11 @@
 <table width="100%">
     <tr>
+        <td width="15%">2018.04.12</td>
+        <td>Add MBP<sub>script</sub> Chapter 3.25: <a href="/mbpst/chap3.25" target="_blank">Ideality Factor</a>
+        </td>
+    </tr>
+
+    <tr>
         <td width="15%">2018.03.15</td>
         <td>Add a MQA Rule: <a href="/mqarules/compdiff_a" target="_blank">Check if Measurement Falls Outside Model
             Corners</a>
