--- a/templates/mbpst/toc.html
+++ b/templates/mbpst/toc.html
@@ -65,6 +65,7 @@
             <li><a href="/mbpst/chap3.22">22. Time Tasks in Flow</a></li>
             <li><a href="/mbpst/chap3.23">23. Global Variables</a></li>
             <li><a href="/mbpst/chap3.24">24. Vth_gm Algorithm</a></li>
+            <li><a href="/mbpst/chap3.25">25. Ideality Factor</a></li>
 
         </ul>
 
