Add an ALFNA FAQ: setOD

--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,5 +1,10 @@
 <table width="100%">
     <tr>
+        <td width="15%">2018.04.16</td>
+        <td>Add ALFNA FAQ: <a href="/alfnafaq/setod" target="_blank">SetOD and SetODvdlin Setups for 1/f Noise Measurement</a>
+        </td>
+    </tr>
+    <tr>
         <td width="15%">2018.04.12</td>
         <td>Add MBP<sub>script</sub> Chapter 3.25: <a href="/mbpst/chap3.25" target="_blank">Ideality Factor</a>
         </td>
