--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,7 +1,14 @@
 <table width="100%">
     <tr>
+        <td width="15%">2018.05.15</td>
+        <td>Add an ICCAP FAQ: <a href="/iccapfaq/usersimfile" target="_blank">Use a Local Copy Config File to Maintain
+            Links to Simulators</a>
+        </td>
+    </tr>
+    <tr>
         <td width="15%">2018.04.16</td>
-        <td>Add ALFNA FAQ: <a href="/alfnafaq/setod" target="_blank">SetOD and SetODvdlin Setups for 1/f Noise Measurement</a>
+        <td>Add ALFNA FAQ: <a href="/alfnafaq/setod" target="_blank">SetOD and SetODvdlin Setups for 1/f Noise
+            Measurement</a>
         </td>
     </tr>
     <tr>
