add mbp license idle time

--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,5 +1,10 @@
 <table width="100%">
     <tr>
+        <td width="15%">2018.05.16</td>
+        <td>Add a MBP FAQ: <a href="/mbpfaq/idletime" target="_blank">License Idle Time Options</a>
+        </td>
+    </tr>
+    <tr>
         <td width="15%">2018.05.15</td>
         <td>Add an ICCAP FAQ: <a href="/iccapfaq/usersimfile" target="_blank">Use a Local Copy Config File to Maintain
             Links to Simulators</a>
