add Select function in MQA Rule

--- a/templates/mqarules/rules/ideff.html
+++ b/templates/mqarules/rules/ideff.html
@@ -16,9 +16,7 @@ Again, Ideff is defined using the following condition:
     <br> <br>Ideff = ( Idhigh + Idlow ) / 2<br> Idhigh is Ids @ Vds=Vdd/2, Vgs=Vgg<br>
     Idlow is Ids @ Vds=Vdd, Vgs=Vgg/2.
 </div>
-<br/>
-<img src="/static/mbpst/Chap3/images/3.1/1.png" border="1px"><br/>
-<br/>
+<br/><img src="/static/mbpst/Chap3/images/3.1/1.png" border="1px"><br/><br/>
 
 Ideff.rule: <a href="/mqarules/ideff/rule/download" target="_blank">download</a>
 <pre>
