--- a/templates/mqarules/toc.html
+++ b/templates/mqarules/toc.html
@@ -25,6 +25,7 @@
     <h5><a href="/mqarules/misHspMos_finfet">Mismatch FinFET | Hspice</a></h5>
     <h5><a href="/mqarules/vtgm">Vth_gm</a></h5>
     <h5><a href="/mqarules/compdiff_a">Meas Falls Outside Corners</a></h5>
+    <h5><a href="/mqarules/select">Select Function</a></h5>
 
     <br/><br/><br/><br/><br/>
 
