--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,5 +1,15 @@
 <table width="100%">
     <tr>
+        <td width="15%">2018.07.27</td>
+        <td>Add a MQA Rule: <a href="/mqarules/select" target="_blank">Use Select Function in Rule</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2018.05.16</td>
+        <td>Add an ICCAP FAQ: <a href="/iccapfaq/recentfiles" target="_blank">Adjust Recent Opened File List</a>
+        </td>
+    </tr>
+    <tr>
         <td width="15%">2018.05.16</td>
         <td>Add a MBP FAQ: <a href="/mbpfaq/idletime" target="_blank">License Idle Time Options</a>
         </td>
