added Help Search Tab

--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,5 +1,10 @@
 <table width="100%">
     <tr>
+        <td width="15%">2018.07.30</td>
+        <td>Add a MQA FAQ: <a href="/mqafaq/helpfile" target="_blank">Missing Search Tab in MQA Help</a>
+        </td>
+    </tr>
+    <tr>
         <td width="15%">2018.07.27</td>
         <td>Add a MQA Rule: <a href="/mqarules/select" target="_blank">Use Select Function in Rule</a>
         </td>
