add MBP Re-Centering

--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,4 +1,9 @@
 <table width="100%">
+     <tr>
+        <td width="15%">2018.08.07</td>
+        <td>Add a MBP Video Tutorial: <a href="/video/MBP_recentering" target="_blank">Re-Centering Solution in MBP 2017</a>
+        </td>
+    </tr>
     <tr>
         <td width="15%">2018.07.30</td>
         <td>Add a MQA FAQ: <a href="/mqafaq/helpfile" target="_blank">Missing Search Tab in MQA Help</a>
