--- a/templates/video/toc.html
+++ b/templates/video/toc.html
@@ -8,6 +8,7 @@
     <hr/>
 
     <h4>MBP</h4>
+    <h5><a href="/video/MBP_recentering">Re-Centering Solution </a></h5>
     <h5><a href="/video/mbp_sram">SRAM Cell Modeling Solution </a></h5>
     <h5><a href="/video/MBP_diff_res">Apply different Drain parasitic resistors to DUTs</a></h5>
     <h5><a href="/video/MBP_IV_T">View IV curves across Temperatures</a></h5>
