--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,7 +1,14 @@
 <table width="100%">
-     <tr>
+    <tr>
+        <td width="15%">2018.08.08</td>
+        <td>Add an ICCAP FAQ: <a href="/iccapfaq/lax_vm" target="_blank">Specify a different Java version for
+            Installation</a>
+        </td>
+    </tr>
+    <tr>
         <td width="15%">2018.08.07</td>
-        <td>Add a MBP Video Tutorial: <a href="/video/MBP_recentering" target="_blank">Re-Centering Solution in MBP 2017</a>
+        <td>Add a MBP Video Tutorial: <a href="/video/MBP_recentering" target="_blank">Re-Centering Solution in MBP
+            2017</a>
         </td>
     </tr>
     <tr>
