add Script 3.26 load Data

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,10 @@ Device Modeling Works
                                     style="color:white">Blog</font></a>
                         </li>
                         <li>
+                            <a href="/iccap" class="btn btn-default btn-lg" style="background-color:#1E90FF"><font
+                                    style="color:white">IC-CAP</font></a>
+                        </li>
+                        <li>
                             <a href="/mbpst" class="btn btn-default btn-lg">MBP <sub>Script</sub><sup>{{mbpstCt}}</sup></a>
                         </li>
                         <li>
@@ -55,10 +59,10 @@ Device Modeling Works
 
 <!-- Page Content -->
 <!--<div class="container" style="height: 160px; overflow: auto">-->
-<div class="container" style="height: 100px; overflow: hidden">
+<div class="container" style="height: 40px; overflow: hidden">
 
     <h5><a href="/update_history" target="_blank">View Full Update History</a></h5>
-    {% include 'updateHisCore.html' %}
+
 
 
 </div>
