--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -93,6 +93,9 @@
                     <a href="/blog"><font style="color:#B22222">Blog</font></a>
                 </li>
                 <li>
+                    <a href="/iccap">IC-CAP</a>
+                </li>
+                <li>
                     <a href="/mbpst">MBP <sub>Script</sub></a>
                 </li>
                 <li>
@@ -141,7 +144,7 @@
                         <a href="/about">About</a>
                     </li>
                 </ul>
-                <p class="copyright text-muted small">Copyright &copy; Device Modeling Works, 2017. All Rights
+                <p class="copyright text-muted small">Copyright &copy; Device Modeling Works, 2019. All Rights
                     Reserved. </p>
             </div>
         </div>
