--- a/templates/mbpst/toc.html
+++ b/templates/mbpst/toc.html
@@ -66,6 +66,7 @@
             <li><a href="/mbpst/chap3.23">23. Global Variables</a></li>
             <li><a href="/mbpst/chap3.24">24. Vth_gm Algorithm</a></li>
             <li><a href="/mbpst/chap3.25">25. Ideality Factor</a></li>
+            <li><a href="/mbpst/chap3.26">26. Load Data</a></li>
 
         </ul>
 
