--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,7 +1,77 @@
 <table width="100%">
     <tr>
+        <td width="15%">2019.09.24</td>
+        <td>MBP Script: <font style="color:red"><a href="/mbpst/chap3.26" target="_blank">Load Data Files into MBP using Script </a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2018.11.30</td>
+        <td>Add an ICCAP Note: <a href="/iccap/pel/whoami" target="_blank">WHOAMI - Example Query Function</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2018.11.20</td>
+        <td>Add a MQA FAQ: <a href="/mqafaq/link2ads" target="_blank">Link MQA to ADS Simulator</a>
+        </td>
+    </tr>
+
+    <tr>
+        <td width="15%">2018.11.19</td>
+        <td>Add a MQA FAQ: <a href="/mqafaq/nonInstanceParam" target="_blank">Remove unwanted variables from measurement for simulation</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2018.11.15</td>
+        <td>Open ICCAP Assembly: <a href="/iccap" target="_blank">Entry for all ICCAP related topics/notes</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2018.10.10</td>
+        <td>Add a MBP FAQ: <a href="/mbpfaq/mbsetpath" target="_blank">Change default mb_set directory location</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2018.08.08</td>
+        <td>Add an ICCAP FAQ: <a href="/iccapfaq/lax_vm" target="_blank">Specify a different Java version for
+            Installation</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2018.08.07</td>
+        <td>Add a MBP Video Tutorial: <a href="/video/MBP_recentering" target="_blank">Re-Centering Solution in MBP
+            2017</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2018.07.30</td>
+        <td>Add a MQA FAQ: <a href="/mqafaq/helpfile" target="_blank">Missing Search Tab in MQA Help</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2018.07.27</td>
+        <td>Add a MQA Rule: <a href="/mqarules/select" target="_blank">Use Select Function in Rule</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2018.05.16</td>
+        <td>Add an ICCAP FAQ: <a href="/iccapfaq/recentfiles" target="_blank">Adjust Recent Opened File List</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2018.05.16</td>
+        <td>Add a MBP FAQ: <a href="/mbpfaq/idletime" target="_blank">License Idle Time Options</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2018.05.15</td>
+        <td>Add an ICCAP FAQ: <a href="/iccapfaq/usersimfile" target="_blank">Use a Local Copy Config File to Maintain
+            Links to Simulators</a>
+        </td>
+    </tr>
+    <tr>
         <td width="15%">2018.04.16</td>
-        <td>Add ALFNA FAQ: <a href="/alfnafaq/setod" target="_blank">SetOD and SetODvdlin Setups for 1/f Noise Measurement</a>
+        <td>Add ALFNA FAQ: <a href="/alfnafaq/setod" target="_blank">SetOD and SetODvdlin Setups for 1/f Noise
+            Measurement</a>
         </td>
     </tr>
     <tr>
