create a top level for MQA.

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,20 +29,15 @@ Device Modeling Works
                                     style="color:white">IC-CAP</font></a>
                         </li>
                         <li>
-                            <a href="/mbpst" class="btn btn-default btn-lg">MBP <sub>Script</sub><sup>{{mbpstCt}}</sup></a>
+                            <a href="/mbpst" class="btn btn-default btn-lg">MBP <sub>Script</sub></a>
                         </li>
                         <li>
-                            <a href="/video" class="btn btn-default btn-lg">Videos <sup>{{videoCt}}</sup></a>
+                            <a href="/mqa" class="btn btn-default btn-lg" style="background-color:#1E6ECC"><font
+                                    style="color:white">MQA</font></a>
                         </li>
+
                         <li>
-                            <a href="/pyrfs" class="btn btn-default btn-lg" style="background-color:#1E6ECC"><font
-                                    style="color:white">PyRFS<sup>{{pyrfsCt}}</sup></font></a>
-                        </li>
-                        <li>
-                            <a href="/mqarules" class="btn btn-default btn-lg">MQA Rules <sup>{{ruleCt}}</sup></a>
-                        </li>
-                        <li>
-                            <a href="/faq" class="btn btn-default btn-lg">FAQs <sup>{{faqCt}}</sup></a>
+                            <a href="/faq" class="btn btn-default btn-lg">FAQs</a>
                         </li>
 
                     </ul>
@@ -55,17 +50,7 @@ Device Modeling Works
 
 
 </div>
-<!-- /.intro-header -->
 
-<!-- Page Content -->
-<!--<div class="container" style="height: 160px; overflow: auto">-->
-<div class="container" style="height: 40px; overflow: hidden">
-
-    <h5><a href="/update_history" target="_blank">View Full Update History</a></h5>
-
-
-
-</div>
 
 </div>
 {% endblock %}
