--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -50,6 +50,7 @@
 
 
 
+
     </script>
 
 </head>
@@ -99,13 +100,7 @@
                     <a href="/mbpst">MBP <sub>Script</sub></a>
                 </li>
                 <li>
-                    <a href="/video">Videos</a>
-                </li>
-                <li>
-                    <a href="/pyrfs"><font style="color:#1E6ECC">PyRFS</font></a>
-                </li>
-                <li>
-                    <a href="/mqarules">MQA Rules</a>
+                    <a href="/mqa">MQA</a>
                 </li>
                 <li>
                     <a href="/faq">FAQs</a>
@@ -134,7 +129,15 @@
                     <li>
                         <a href="/">Home</a>
                     </li>
+
+
                     <li class="footer-menu-divider">&sdot;</li>
+
+
+                    <li><a href="/update_history" target="_blank">Updates</a></li>
+                    <li class="footer-menu-divider">&sdot;</li>
+
+
                     <li>
                         <a href="/disclaimer" target="_blank">Disclaimers</a>
                     </li>
