add MQA rule CompDiff b.

--- a/templates/mqarules/rules/compdiff_a.html
+++ b/templates/mqarules/rules/compdiff_a.html
@@ -1,6 +1,6 @@
 {% extends "mqarules/mqarules_index.html" %}
 {% block title%}
-Rule: Cgs Cgd
+Rule: CompDiff App 1
 {% endblock %}
 
 {% block mqarulesmain %}
