add MQA Video ASM-HEMT model qa

--- a/templates/iccap/agenda.html
+++ b/templates/iccap/agenda.html
@@ -10,7 +10,8 @@ IC-CAP App Notes
     <h3>IC-CAP Application Notes</h3>
     <hr>
     <div overflow="scroll">
-
+        <h4><a href="/video" target="_blank"> Video Tutorials</a></h4>
+        <hr/>
 
         <h4>Python Notes</h4>
         <ul>
@@ -94,6 +95,7 @@ IC-CAP App Notes
 
         </ul>
         <br/>
+
         <h4>Miscellaneous</h4>
         <ul>
             <table>
