--- a/templates/mqa/agenda.html
+++ b/templates/mqa/agenda.html
@@ -16,6 +16,8 @@ MQA App Notes
             <hr/>
             <h4><a href="/mqafaq" target="_blank"> MQA FAQs</a></h4>
             <hr/>
+            <h4><a href="/video/mqa-asm-hemt" target="_blank"> Video Tutorials</a></h4>
+            <hr/>
             <h4>Python PostProcess</h4>
             <hr/>
 
