--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,12 +1,20 @@
 <table width="100%">
-     <tr>
+    <tr>
+        <td width="15%">2019.10.21</td>
+        <td>MQA Video: <font style="color:red"><a href="/video/mqa-asm-hemt" target="_blank">ASM-HEMT comprehensive
+            model QA</a>
+        </td>
+    </tr>
+    <tr>
         <td width="15%">2019.09.26</td>
-        <td>MQA Rule: <font style="color:red"><a href="/mqarules/compdiff_b" target="_blank">Check Differences(Vth, Idsat) b/t Models</a>
+        <td>MQA Rule: <font style="color:red"><a href="/mqarules/compdiff_b" target="_blank">Check Differences(Vth,
+            Idsat) b/t Models</a>
         </td>
     </tr>
     <tr>
         <td width="15%">2019.09.24</td>
-        <td>MBP Script: <font style="color:red"><a href="/mbpst/chap3.26" target="_blank">Load Data Files into MBP using Script </a>
+        <td>MBP Script: <font style="color:red"><a href="/mbpst/chap3.26" target="_blank">Load Data Files into MBP using
+            Script </a>
         </td>
     </tr>
     <tr>
@@ -22,7 +30,8 @@
 
     <tr>
         <td width="15%">2018.11.19</td>
-        <td>MQA FAQ: <a href="/mqafaq/nonInstanceParam" target="_blank">Remove unwanted variables from measurement for simulation</a>
+        <td>MQA FAQ: <a href="/mqafaq/nonInstanceParam" target="_blank">Remove unwanted variables from measurement for
+            simulation</a>
         </td>
     </tr>
     <tr>
@@ -523,7 +532,7 @@
     <tr>
         <td width="15%">2017.05.04</td>
         <td><font color="red">May the 4th be with you~</font> MBP FAQ: <a href="/mbpfaq/tinyNumbers"
-                                                                                target="_blank">Display Tiny
+                                                                          target="_blank">Display Tiny
             Numbers</a>
         </td>
     </tr>
