--- a/templates/video/toc.html
+++ b/templates/video/toc.html
@@ -27,6 +27,7 @@
     <hr/>
 
     <h4>MQA</h4>
+    <h5><a href="/video/mqa-asm-hemt">ASM-HEMT model QA</a></h5>
     <h5><a href="/video/mqaHvsS">Compare HSPICE vs SPECTRE Models</a></h5>
     <h5><a href="/video/MQA_NearVth">Gm/Rout/Slope/Ids Near Vth</a></h5>
     <h5><a href="/video/MQA_SimVerComp">Compare Diff Versions of a Simulator</a></h5>
