add MQA Video ASM-HEMT model qa

--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,19 +1,44 @@
 <table width="100%">
+
+    <tr>
+        <td width="15%">2019.10.23</td>
+        <td>ICCAP Video: <a href="/video/iccap_check_spar" target="_blank">Accurate Transistor S-Parmeter Measurement
+            and Validation</a>
+        </td>
+    </tr>
+
+    <tr>
+        <td width="15%">2019.10.23</td>
+        <td>ICCAP Video: <a href="/video/iccap_ind" target="_blank">Model RF Passive Devices - Spiral Inductors</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2019.10.23</td>
+        <td>ICCAP Video: <a href="/video/iccap_cap_res" target="_blank">Model RF Passive
+            Devices: Capacitors and Resistor</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2019.10.22</td>
+        <td>MQA Video: <a href="/video/mqa_np_mc" target="_blank">NP Correlation + Monte Carlo
+            QA</a>
+        </td>
+    </tr>
     <tr>
         <td width="15%">2019.10.21</td>
-        <td>MQA Video: <font style="color:red"><a href="/video/mqa-asm-hemt" target="_blank">ASM-HEMT comprehensive
+        <td>MQA Video: <a href="/video/mqa-asm-hemt" target="_blank">ASM-HEMT comprehensive
             model QA</a>
         </td>
     </tr>
     <tr>
         <td width="15%">2019.09.26</td>
-        <td>MQA Rule: <font style="color:red"><a href="/mqarules/compdiff_b" target="_blank">Check Differences(Vth,
+        <td>MQA Rule: <a href="/mqarules/compdiff_b" target="_blank">Check Differences(Vth,
             Idsat) b/t Models</a>
         </td>
     </tr>
     <tr>
         <td width="15%">2019.09.24</td>
-        <td>MBP Script: <font style="color:red"><a href="/mbpst/chap3.26" target="_blank">Load Data Files into MBP using
+        <td>MBP Script: <a href="/mbpst/chap3.26" target="_blank">Load Data Files into MBP using
             Script </a>
         </td>
     </tr>
