--- a/templates/video/toc.html
+++ b/templates/video/toc.html
@@ -2,8 +2,11 @@
 
 <div>
     <h4>ICCAP</h4>
-    <h5><a href="/video/iccap_bjt_modeling">How to Model a BJT(Gummel-Poon)</a></h5>
+    <h5><a href="/video/iccap_bjt_modeling">Model a BJT(Gummel-Poon)</a></h5>
     <h5><a href="/video/ICCAP_OPEN_GUI">Open Source User Interface</a></h5>
+    <h5><a href="/video/iccap_cap_res">Model RF Cap and Res Devices</a></h5>
+    <h5><a href="/video/iccap_ind">Model RF Spiral Inductors</a></h5>
+    <h5><a href="/video/iccap_check_spar">Transistor S-Parm Measurement and Validation</a></h5>
 
     <hr/>
 
@@ -28,6 +31,7 @@
 
     <h4>MQA</h4>
     <h5><a href="/video/mqa-asm-hemt">ASM-HEMT model QA</a></h5>
+    <h5><a href="/video/mqa_np_mc">NP Correlation + Monte Carlso</a></h5>
     <h5><a href="/video/mqaHvsS">Compare HSPICE vs SPECTRE Models</a></h5>
     <h5><a href="/video/MQA_NearVth">Gm/Rout/Slope/Ids Near Vth</a></h5>
     <h5><a href="/video/MQA_SimVerComp">Compare Diff Versions of a Simulator</a></h5>
