--- a/templates/iccap/agenda.html
+++ b/templates/iccap/agenda.html
@@ -10,8 +10,34 @@ IC-CAP App Notes
     <h3>IC-CAP Application Notes</h3>
     <hr>
     <div overflow="scroll">
-        <h4><a href="/video" target="_blank"> Video Tutorials</a></h4>
-        <hr/>
+        <h4>Video Tutorials</h4>
+        <ul>
+            <table>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/video/ICCAP_OPEN_GUI" target="_blank">1. Simplify Device Model Extraction using an Open Source User
+                            Interface</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/video/iccap_bjt_modeling" target="_blank">2. Model a Bipolar Junction Transistor</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/video/iccap_cap_res" target="_blank">3. Model RF Passive Devices: Capacitors and Resistor</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/video/iccap_ind" target="_blank">4. Model RF Passive Devices: Spiral Inductors</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/video/iccap_check_spar" target="_blank">5. Accurate Transistor S-Parmeter Measurement and Validation</a></td>
+                </tr>
+
+            </table>
+        </ul>
+        <br/>
 
         <h4>Python Notes</h4>
         <ul>
