add Franz to About page

--- a/templates/iccap/agenda.html
+++ b/templates/iccap/agenda.html
@@ -32,7 +32,7 @@ IC-CAP App Notes
                 </tr>
                 <tr style="border-bottom: 1px solid gainsboro">
                     <td style="width:750px">
-                        <a href="/video/iccap_check_spar" target="_blank">5. Accurate Transistor S-Parmeter Measurement and Validation</a></td>
+                        <a href="/video/iccap_check_spar" target="_blank">5. Accurate Transistor S-Parameter Measurement and Validation</a></td>
                 </tr>
 
             </table>
