--- a/templates/video/toc.html
+++ b/templates/video/toc.html
@@ -6,7 +6,7 @@
     <h5><a href="/video/ICCAP_OPEN_GUI">Open Source User Interface</a></h5>
     <h5><a href="/video/iccap_cap_res">Model RF Cap and Res Devices</a></h5>
     <h5><a href="/video/iccap_ind">Model RF Spiral Inductors</a></h5>
-    <h5><a href="/video/iccap_check_spar">Transistor S-Parm Measurement and Validation</a></h5>
+    <h5><a href="/video/iccap_check_spar">Transistor S-Param Measurement and Validation</a></h5>
 
     <hr/>
 
