add Iccap app notes: 1. Spar modeling 2. NWA Cal

--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,7 @@ About
     <h3>About this Site</h3>
     <hr/>
 
-    Acknowledged by <a href="http://mos-ak.org" target="_blank">MOS-AK.org</a>, this site aims to provide <font
+    This site aims to provide <font
         style="color:red">ADDITIONAL</font> application notes, best practice, and FAQs, etc material for Keysight
     end-to-end
     Device Modeling
@@ -38,13 +38,26 @@ About
     However, you are welcome to discuss the usage of any of the Keysight Device Modeling software with us.
     <br/><br/>
     Thank you for choosing Keysight!
-    <br/><br/> <br/><br/>
+    <br/><br/>
     <h3>Main Contributors</h3>
     <hr/>
     <h4>Shuang Cai</h4>
-    An active Keysight employee(11+ years), Device Modeling Application Engineer, based in San Jose, CA, USA.
+    An active Keysight employee(14+ years), Device Modeling Application Engineer, based in San Jose, CA, USA.
     <br/>
     He has a lovely daughter and a son to deal with at most of his spare time, likes hiking, reading and writing.
+    <br/><br/>
+    <h4>Franz Sischka</h4>
+    Founder of SisConsult(<a href="https://www.franz-sischka.de" target="_blank">https://www.franz-sischka.de</a>), and
+    a distinguished device modeling expert formerly worked for HP/Agilent/Keysight.
+    <br/>
+    With more than 20 years experience as application engineer at HP/Agilent/Keysight in Germany, Franz has been
+    supporting the IC-CAP device characterization and modeling software, and now SisConsult offers consulting services related
+    to the following:
+    <ul>
+        <li>Electronic Device Measurement</li>
+        <li>Data Verification</li>
+        <li>Modeling</li>
+    </ul>
     <br/>
     <br/><br/> <br/><br/><br/>
 
