--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,5 +1,69 @@
 <table width="100%">
-
+    <tr>
+        <td width="15%">2020.01.09</td>
+         <td>ICCAP Note Update: <a href="/iccap-spar/1.2" target="_blank">Video Demo: Transition of the Impedance Plane into the Smith Chart</a>
+        </td>
+    </tr>
+     <tr>
+        <td width="15%">2020.01.09</td>
+         <td>ICCAP Note Update: <a href="/iccap-spar/1.1" target="_blank">Two PDF app notes: S-Par Techniques for Faster, More Accurate Network Design</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2020.01.08</td>
+        <td>ICCAP Note: <a href="/iccap-nwa-cal/4" target="_blank">Verification of the NWA Calibration</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2020.01.08</td>
+        <td>ICCAP Note: <a href="/iccap-nwa-cal/5" target="_blank">Get CalKit Data from Measurements</a>
+        </td>
+    </tr>
+     <tr>
+        <td width="15%">2020.01.08</td>
+        <td>ICCAP Note: <a href="/iccap-nwa-cal/0" target="_blank">Identify the Maximum Applicable RF Power</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2020.01.07</td>
+        <td>ICCAP Note: <a href="/iccap-nwa-cal/1" target="_blank">Performing the NWA Cal - 1</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2020.01.07</td>
+        <td>ICCAP Note: <a href="/iccap-nwa-cal/1.2" target="_blank">Performing the NWA Cal - 2</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2020.01.07</td>
+        <td>ICCAP Note: <a href="/iccap-nwa-cal/2" target="_blank">Video - NWA Cal Example</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2020.01.07</td>
+        <td>ICCAP Note: <a href="/iccap-spar/1.5" target="_blank">Video - S-Parameters Modeling in Action</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2020.01.07</td>
+        <td>ICCAP Note: <a href="/iccap-spar/1.4" target="_blank">How to Simulate S-Parameters</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2020.01.07</td>
+        <td>ICCAP Note: <a href="/iccap-spar/1.3" target="_blank">Device Modeling Based on S-Parameters</a>
+        </td>
+    </tr>
+     <tr>
+        <td width="15%">2020.01.07</td>
+        <td>ICCAP Note: <a href="/iccap-spar/1.2" target="_blank">Interpreting S-Parameters</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2020.01.06</td>
+        <td>ICCAP Note: <a href="/iccap-spar/1.1" target="_blank">From Classical TwoPort to S-Parameters</a>
+        </td>
+    </tr>
     <tr>
         <td width="15%">2019.10.23</td>
         <td>ICCAP Video: <a href="/video/iccap_check_spar" target="_blank">Accurate Transistor S-Parmeter Measurement
