--- a/templates/iccap/agenda.html
+++ b/templates/iccap/agenda.html
@@ -10,6 +10,71 @@ IC-CAP App Notes
     <h3>IC-CAP Application Notes</h3>
     <hr>
     <div overflow="scroll">
+
+
+        <h4>S-Parameters for Modeling Engineers</h4>
+
+        <ul>
+            <table>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-spar/1.1" target="_blank">1. From Classical TwoPort to S-Parameters</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-spar/1.2" target="_blank">2. Interpreting S-Parameters</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-spar/1.3" target="_blank">3. Device Modeling Based on S-Parameters</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-spar/1.4" target="_blank">4. How to Simulate S-Parameters</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-spar/1.5" target="_blank">5. Video - S-Parameters Modeling in Action</a></td>
+                </tr>
+
+            </table>
+        </ul>
+        <br/>
+
+        <h4>Network Analyzer(NWA) Calibration</h4>
+
+        <ul>
+            <table>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-nwa-cal/0" target="_blank">1. Identify the Maximum Applicable RF Power</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-nwa-cal/1" target="_blank">2. Performing the NWA Cal - 1</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-nwa-cal/1.2" target="_blank">3. Performing the NWA Cal - 2</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-nwa-cal/4" target="_blank">4. Verification of the NWA Calibration</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-nwa-cal/5" target="_blank">5. Get CalKit Data from Measurements</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-nwa-cal/2" target="_blank">6. Video - NWA Cal Example</a></td>
+                </tr>
+
+
+            </table>
+        </ul>
+        <br/>
+
         <h4>Video Tutorials</h4>
         <ul>
             <table>
